src/objects/BXGO_Parent_Opportunity_Contact__c.object
<CustomObject>
    <description>Customer Contacts associated with a Parent Opportunity</description>
    <fields>
        <fullName>BXFR_Attitude_towards_Baxter__c</fullName>
        <label>Attitude towards Baxter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very positive</fullName>
                </value>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Very negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXFR_Contact_Role__c</fullName>
        <label>Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business User</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Economic Buyer</fullName>
                </value>
                <value>
                    <fullName>Economic Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Evaluator</fullName>
                </value>
                <value>
                    <fullName>Executive Sponsor</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Technical Buyer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXFR_Objectives_Parent_Opportunity__c</fullName>
        <label>Objectives (Parent Opportunity)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BXFR_Relevance__c</fullName>
        <label>Influence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXGO_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Parent Opportunity Contacts</relationshipLabel>
        <relationshipName>Parent_Opportunity_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BXGO_Parent_Opportunity__c</fullName>
        <label>Parent Opportunity</label>
        <referenceTo>BXGO_Parent_Opportunity__c</referenceTo>
        <relationshipLabel>Parent Opportunity Contacts</relationshipLabel>
        <relationshipName>Parent_Opportunity_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Parent Opportunity Contact</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Parent Opportunity Contacts ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parent Opportunity Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>